<resources>
    <string name="app_name">Kotlin Example Project</string>

    <!-- General -->
    <string name="button_neutral_text">OK</string>
    <string name="button_cancel_text">Annuler</string>
    <string name="button_validate_text">Valider</string>
    <string name="button_confirm_text">Confirmer</string>
    <string name="button_clear_text">Effacer</string>
    <string name="button_negative_text">Non</string>
    <string name="button_positive_text">Oui</string>
    <string name="button_back_text">Retour</string>

    <!-- Errors -->
    <string name="error_general">Une erreur est survenue</string>
    <string name="error_request_failed">La requête a échoué</string>
    <string name="error_offline">Veuillez vérifier votre connexion internet</string>

    <!-- Menu -->
    <string name="menu_character_list_title">Personnages</string>
    <string name="menu_episode_list_title">Episodes</string>
    <string name="menu_location_list_title">Lieux</string>
    <string name="menu_theme_update_title">Changer de thème</string>

    <!-- Character -->
    <string name="character_list_empty_label">Impossible de récupérer la liste des personnages</string>
    <string name="character_gender_male">Homme</string>
    <string name="character_gender_female">Femme</string>
    <string name="character_gender_genderless">Sans genre</string>
    <string name="character_gender_unknown">Genre inconnu</string>
    <string name="character_status_alive">Vivant</string>
    <string name="character_status_dead">Mort</string>
    <string name="character_status_unknown">Statut Inconnu</string>
    <string name="character_gender_label">Genre</string>
    <string name="character_status_label">Statut</string>
    <string name="character_species_label">Espèce</string>
    <string name="character_origin_label">Origine</string>
    <string name="character_episode_count_label">Apparaît dans</string>
    <plurals name="character_episode_count">
        <item quantity="zero">%s épisode</item>
        <item quantity="one">%s épisode</item>
        <item quantity="other">%s épisodes</item>
    </plurals>
    <string name="character_origin_and_species_unknown_label">Inconnue</string>

    <!-- Episode -->
    <string name="episode_list_empty_label">Impossible de récupérer la liste des épisodes</string>
    <string name="episode_character_count">Personnages : %d</string>

    <!-- Location -->
    <string name="location_list_empty_label">Impossible de récupérer la liste des lieux</string>
    <string name="location_resident_count">Résidents : %d</string>
    <string name="location_dimension_unknown_label">Dimension inconnue</string>

    <!-- Theme -->
    <string name="dialog_update_theme_title">Changer de thème</string>
    <string name="dialog_update_theme_message">Êtes vous sûr de vouloir changer de thème ?</string>

</resources>