<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    android:overScrollMode="never">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/character_detail_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/base_margin_double"
            android:padding="@dimen/character_image_stroke_width"
            app:layout_constraintBottom_toTopOf="@id/character_detail_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:shapeAppearance="?attr/shapeAppearanceCornerSize50Percent"
            app:strokeColor="?attr/iconBackground"
            app:strokeWidth="@dimen/character_image_stroke_width" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:textAppearance="?attr/textAppearanceTitle2"
            app:layout_constraintBottom_toTopOf="@id/character_detail_information_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_detail_image"
            tools:text="Rick Sanchez" />

        <androidx.cardview.widget.CardView
            android:id="@+id/character_detail_information_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_double"
            app:cardCornerRadius="0dp"
            app:layout_constraintBottom_toTopOf="@id/character_detail_episodes_card"
            app:layout_constraintTop_toBottomOf="@id/character_detail_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin"
                    android:text="@string/character_gender_label"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintEnd_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintBottom_toBottomOf="@id/character_detail_gender_label"
                    app:layout_constraintStart_toEndOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toTopOf="@id/character_detail_gender_label"
                    tools:text="Homme" />

                <View
                    android:id="@+id/character_detail_gender_divider"
                    android:layout_width="0dp"
                    android:layout_height="?attr/dividerHeight"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin_double"
                    android:background="?attr/dividerColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_gender_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin"
                    android:text="@string/character_status_label"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintEnd_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_gender_divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintBottom_toBottomOf="@id/character_detail_status_label"
                    app:layout_constraintStart_toEndOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toTopOf="@id/character_detail_status_label"
                    tools:text="Vivant" />

                <View
                    android:id="@+id/character_detail_status_divider"
                    android:layout_width="0dp"
                    android:layout_height="?attr/dividerHeight"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin_double"
                    android:background="?attr/dividerColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_status_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_species_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin"
                    android:text="@string/character_species_label"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintEnd_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_status_divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintBottom_toBottomOf="@id/character_detail_species_label"
                    app:layout_constraintStart_toEndOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toTopOf="@id/character_detail_species_label"
                    tools:text="Human" />

                <View
                    android:id="@+id/character_detail_species_divider"
                    android:layout_width="0dp"
                    android:layout_height="?attr/dividerHeight"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin_double"
                    android:background="?attr/dividerColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_species_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_origin_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin"
                    android:text="@string/character_origin_label"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintEnd_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_species_divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintBottom_toBottomOf="@id/character_detail_origin_label"
                    app:layout_constraintStart_toEndOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toTopOf="@id/character_detail_origin_label"
                    tools:text="Earth" />

                <View
                    android:id="@+id/character_detail_origin_divider"
                    android:layout_width="0dp"
                    android:layout_height="?attr/dividerHeight"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin_double"
                    android:background="?attr/dividerColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_origin_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_episode_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:layout_marginEnd="@dimen/base_margin"
                    android:layout_marginBottom="@dimen/base_margin"
                    android:text="@string/character_episode_count_label"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toBottomOf="@id/character_detail_origin_divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/character_detail_episode_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    app:layout_constraintBottom_toBottomOf="@id/character_detail_episode_count_label"
                    app:layout_constraintStart_toEndOf="@id/character_detail_information_guideline"
                    app:layout_constraintTop_toTopOf="@id/character_detail_episode_count_label"
                    tools:text="41 épisodes" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/character_detail_information_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.35" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/character_detail_episodes_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_detail_information_card">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_detail_episode_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/view_character_episode_item" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>